feat: refactor BoardService and UserService for improved user handling and post management