@@ -10,19 +10,23 @@ import com.dkim.springproj.springproj.main.repository.PostRepository;
 import com.dkim.springproj.springproj.main.repository.UserRepository;
 import com.dkim.springproj.springproj.main.utility.JwtUtility;
 import com.dkim.springproj.springproj.main.utility.Pagination;
+import io.jsonwebtoken.Claims;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
-import io.jsonwebtoken.Claims;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class BoardService {
+
   private final PostRepository postRepository;
   private final UserRepository userRepository;
+  private final JwtUtility jwtUtility;
+
   @Value("${jwt.secret}")
   private String secret;
-  private final JwtUtility jwtUtility;
-  private final int pageSize = 10;
+
+  private static final int PAGE_SIZE = 10;
 
   public BoardService(PostRepository postRepository, UserRepository userRepository) {
     this.postRepository = postRepository;
@@ -30,50 +34,65 @@ public class BoardService {
     this.jwtUtility = new JwtUtility();
   }
 
-  // Create a new post
-  public Post createPost(String token, PostBodyDto post) {
-    Claims jwtPayload = jwtUtility.decodeToken(secret, token);
-    String userId = jwtPayload.getAudience();
-    User user = userRepository.findByUserId(userId)
-        .orElseThrow(() -> new NotFoundException("유효한 사용자를 찾을 수 없습니다."));
-    Post newPost = new Post();
-    newPost.setTitle(post.getTitle());
-    newPost.setContent(post.getContent());
-    newPost.setUser(user);
+  public Post createPost(String token, PostBodyDto postBodyDto) {
+    User user = getUserFromToken(token);
+    Post newPost = mapToPost(postBodyDto, user);
     return postRepository.save(newPost);
   }
 
-  // Retrieve paginated posts
   public Pagination<ViewPostDto> getPaginatedPosts(int page) {
-    List<Post> allPosts = postRepository.findAll();
-    List<ViewPostDto> posts = allPosts.stream()
-        .map(post -> new ViewPostDto(post.getId(), post.getTitle(), post.getContent(), post.getUser().getUserId(),
-            post.getTimestamp()))
-        .toList();
-    Pagination<ViewPostDto> pagination = new Pagination<>(posts, pageSize);
+    List<ViewPostDto> posts = postRepository.findAll().stream()
+        .map(this::mapToViewPostDto)
+        .collect(Collectors.toList());
+    Pagination<ViewPostDto> pagination = new Pagination<>(posts, PAGE_SIZE);
     pagination.setCurrentPage(page);
     return pagination;
   }
 
-  // Retrieve a post by ID
   public ViewPostDto getPostById(Long id) {
-    Post post = postRepository.findById(id)
-        .orElseThrow(() -> new NotFoundException("게시글을 찾을 수 없습니다."));
-    return new ViewPostDto(post.getId(), post.getTitle(), post.getContent(), post.getUser().getUserId(),
-        post.getTimestamp());
+    Post post = findPostById(id);
+    return mapToViewPostDto(post);
   }
 
-  // Delete a post by ID
   public void deletePost(String token, Long id) {
+    User user = getUserFromToken(token);
+    Post post = findPostById(id);
+    validatePostOwnership(user, post);
+    postRepository.deleteById(id);
+  }
+
+  private User getUserFromToken(String token) {
     Claims jwtPayload = jwtUtility.decodeToken(secret, token);
     String userId = jwtPayload.getAudience();
-    User user = userRepository.findByUserId(userId)
+    return userRepository.findByUserId(userId)
         .orElseThrow(() -> new NotFoundException("유효한 사용자를 찾을 수 없습니다."));
-    Post post = postRepository.findById(id)
+  }
+
+  private Post findPostById(Long id) {
+    return postRepository.findById(id)
         .orElseThrow(() -> new NotFoundException("게시글을 찾을 수 없습니다."));
+  }
+
+  private void validatePostOwnership(User user, Post post) {
     if (!post.getUser().getUserId().equals(user.getUserId())) {
       throw new UnauthorizedException("해당 게시글을 삭제할 권한이 없습니다.");
     }
-    postRepository.deleteById(id);
+  }
+
+  private Post mapToPost(PostBodyDto postBodyDto, User user) {
+    Post post = new Post();
+    post.setTitle(postBodyDto.getTitle());
+    post.setContent(postBodyDto.getContent());
+    post.setUser(user);
+    return post;
+  }
+
+  private ViewPostDto mapToViewPostDto(Post post) {
+    return new ViewPostDto(
+        post.getId(),
+        post.getTitle(),
+        post.getContent(),
+        post.getUser().getUserId(),
+        post.getTimestamp());
   }
 }
